--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == README
 
+Contributors:
+
 Serj_Bichkhidzhy 	serj.bichkhidzhy@gmail.com
 
 This README would normally document whatever steps are necessary to get the
