--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,8 @@
 == README
 
-Contributors:
++Contributors:
 
--denis denisdotsenko7@gmail.com
+*denis denisdotsenko7@gmail.com
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
